# sample_programs

EusLisp/: pr2main.l  tabletop-sample.l
cc_labeling/: #connected.cpp#  CMakeLists.txt  connected.cpp  connected.h  contour_thinning.h  main.cpp
change_detection/: octree_change_detection.cpp
connect_component/: CMakeLists.txt  main.cpp  precomp.hpp
connect_component_labeling/: CMakeLists.txt  main.cpp
euclidean_clustering/: CMakeLists.txt  main.cpp  test_pcd.pcd
friends/: CMakeLists.txt  main.cpp
gfpfh/: CMakeLists.txt  main.cpp
hrp2_joints/: #hrp2w-printer-plugin.l#  hrp2w-printer-plugin.l  record-joint.l
hrp2w_calibration/: #hrp2w-calibration.l#  hrp2-calibration.l  hrp2w-calibration.l  hrp2w-interface.l
lccp_segmentation/: CMakeLists.txt  main.cpp
least_sq/: main  main.cpp
libsvm/: CMakeLists.txt  main.cpp  model  output  svm-train  svm-train.c
macro/: main  main.cpp
openMP/: CMakeLists.txt  main.cpp
opencv_python/: mark_image.py  text.txt
opencv_xml/: #main.cpp#  main.cpp
openmp/: #for_loop.cpp#  CMakeLists.txt  atomic.cpp  barrier.cpp  critial.cpp  hello_world.cpp  section.cpp  work_sharing_single.cpp
optical_flow/: CMakeLists.txt  fback.cpp  fback.cpp.old.old  main.cpp  opt_flow.py
pca_rot/: CMakeLists.txt  Object_Boundary.cpp  Object_Boundary.h  RGBD_Image_Processing.cpp  RGBD_Image_Processing.h  contour_thinning.h  main.cpp
pca_rot/back-up/: main.cpp  main_5.cpp
pca_rot/build.old/: CMakeCache.txt  Makefile  build.sh  hcurve.txt  main  main_1.cpp  main_2.cpp  main_3_knn.cpp  main_4.cpp  main_5.cpp  orientation.txt
pcl_icp/: #interactive_icp.cpp#  interactive_icp.cpp
pcl_inertia/: CMakeLists.txt  main.cpp
pcl_recognition/: correspondence_grouping.cpp
pixel_classification/: CMakeLists.txt  main.cpp
plane_segmentation/: CMakeLists.txt  main.cpp
pointers/: main  main.cpp
principle_curvature/: CMakeLists.txt  main.cpp
python_tutorial/: class_tutorial.py  loop_py.py  numpy_py.py  opencv_py.py  python_sys.py
rag/: #main.cpp#  .#main.cpp  main.cpp
range_image/: CMakeLists.txt  main.cpp
ransac/: CMakeLists.txt  main.cpp
region_adjacency_graph/: CMakeLists.txt  main.cpp
(+115 files in other folders)
